# cylo

./: Cargo.toml  README.md
src/: execution_env.rs  lib.rs  linux.rs  metadata.rs  platform.rs  platform_utils.rs  ramdisk.rs  repo.rs  state.rs  windows.rs
src/backends/: apple.rs  config.rs  errors.rs  factory.rs  firecracker.rs  landlock.rs  mod.rs  trait_def.rs  types.rs
src/backends/apple/: execution.rs  image.rs  mod.rs  resource_stats.rs  tests.rs  validation.rs
src/backends/firecracker/: api_client.rs  backend.rs  config.rs  mod.rs  ssh.rs  vm_execution.rs  vm_instance.rs  vm_lifecycle.rs
src/backends/landlock/: execution.rs  features.rs  jail.rs  mod.rs  monitoring.rs
src/backends/windows/: job.rs  limits.rs  mod.rs
src/exec/: bash.rs  go.rs  javascript.rs  mod.rs  python.rs  rust.rs  utils.rs
src/executor/: execution.rs  factory.rs  metrics.rs  mod.rs  routing.rs  types.rs
src/firecracker/: api_client.rs  api_types.rs  config.rs  mod.rs  ssh_execution.rs  vm_lifecycle.rs
src/instance_manager/: global.rs  lifecycle.rs  maintenance.rs  mod.rs  queries.rs  tests.rs
src/linux/: detection.rs  directory.rs  mod.rs  mount.rs  namespace_create.rs  privilege.rs  sudo_create.rs
src/platform/: api.rs  capabilities.rs  detection.rs  mod.rs  performance.rs  ramdisk.rs  types.rs
src/sandbox/: environment.rs  mod.rs  path_utils.rs
src/sandbox/manager/: go.rs  mod.rs  node.rs  python.rs  rust.rs
tests/: user_dir_test.rs
